--- a/style.css
+++ b/style.css
@@ -1192,7 +1192,7 @@ xclip
     font-weight: 500;
     color: #fff;
     letter-spacing: 1px;
-    text-transform: capitalize;
+    text-transform: ;
     margin: 0px;
 }
 .box .post{
